programming_session.log
Script started on 2022-10-06 15:09:52+09:00 [TERM="xterm-256color" TTY="/dev/pts/3" COLUMNS="73" LINES="45"]
]0;nao@nao: ~/bprog2022[01;32mnao@nao[00m:[01;34m~/bprog2022[00m$ lghci
[0m<<<<<<<<<<<<<<<<<<[0m
[0mYou are currently using Stack version 2.7.5, but version 2.9.1 is available[0m
[0mYou can try to upgrade by running 'stack upgrade'[0m
[0mTired of seeing this? Add 'recommend-stack-upgrade: false' to /home/nao/.stack/config.yaml[0m
[0m>>>>>>>>>>>>>>>>>>[0m
[0m[0m
[0m[0m
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/nao/bprog2022/.ghci
2022-10-06 15:10:05.837806541
[?1h=>>> :q
[?1l>Leaving GHCi.
]0;nao@nao: ~/bprog2022[01;32mnao@nao[00m:[01;34m~/bprog2022[00m$ stack apa[K[K[Kupdate
[0mSelected mirror https://hackage.haskell.org/[0m
[0mDownloading timestamp[0m
[0mDownloading snapshot[0m
[0mUpdating index[0m
[0mWaiting to acquire cache lock on /home/nao/.stack/pantry/hackage/hackage-security-lock[0m
[0mAcquired cache lock on /home/nao/.stack/pantry/hackage/hackage-security-lock[0m
[0mReleased cache lock on /home/nao/.stack/pantry/hackage/hackage-security-lock[0m
[0mUpdated package index downloaded[0m
[0mCalculating hashes to check for hackage-security rebases or filesystem changes[0m
[0mUpdating preexisting cache, should be quick[0m
[0mPopulating cache from file size 818339328, hash 7c0244a4009e7954577790ee2347a6ea7b296e38bc7b2d6099948c733fe76be3[0m
[0mPopulating package index cache ...[0m
[0mPackage index cache populated[0m
]0;nao@nao: ~/bprog2022[01;32mnao@nao[00m:[01;34m~/bprog2022[00m$ stack update[K[K[K[Kgrade
[0mCurrent Stack version: 2.7.5, available download version: 2.9.1[0m
[0mNewer version detected, downloading[0m
[0mQuerying for archive location for platform: linux-x86_64-static[0m
[0mDownloading from: https://github.com/commercialhaskell/stack/releases/download/v2.9.1/stack-2.9.1-linux-x86_64.tar.gz[0m
[0mDownload complete, testing executable[0m
Version 2.9.1, Git revision 409d56031b4240221d656db09b2ba476fe6bb5b1 x86_64 hpack-0.35.0
[0mNew stack executable available at /home/nao/.local/bin/stack[0m
[0mAlso copying stack executable to /usr/local/bin/stack[0m
[0mPermission error when trying to copy: /usr/local/bin: copyFile:atomicCopyFileContents:withReplacementFile:openBinaryTempFile: permission denied (Permission denied)[0m
[0mShould I try to perform the file copy using sudo? This may fail[0m
Try using sudo? (y/n) n
]0;nao@nao: ~/bprog2022[01;32mnao@nao[00m:[01;34m~/bprog2022[00m$ lghci
[0mTrouble loading CompilerPaths cache: UnliftIO.Exception.throwString called with:

Global dump did not parse correctly
Called from:
  throwString (src/Stack/Storage/User.hs:295:20 in stack-2.9.1-6pnXUCahaPICbSEjLQ1K5Q:Stack.Storage.User)
[0m
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/nao/bprog2022/.ghci
2022-10-06 15:12:15.893868291
[?1h=>>> :l src/gh[K[KRE[Kec.hs
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:12:38.399512639
[?1h=>>> product
[?1l>
[;1m<interactive>:2:1: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    • No instance for (Show ([Int] -> Int))
        arising from a use of ‘print’
        (maybe you haven't applied a function to enough arguments?)
    • In a stmt of an interactive GHCi command: print it[0m[0m
2022-10-06 15:13:15.259205289
[?1h=>>> product {[K[]
[?1l>1
2022-10-06 15:13:55.573388302
[?1h=>>> product []3],]1],]4][C
[?1l>12
2022-10-06 15:14:06.869180056
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:15:05.030516135
[?1h=>>> :r[2Dproduct [3,1,4]
[?1l>0
2022-10-06 15:15:07.891465519
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:18:23.432866632
[?1h=>>> :i Num
[?1l>type Num :: * -> Constraint
class Num a where
  (+) :: a -> a -> a
  (-) :: a -> a -> a
  (*) :: a -> a -> a
  negate :: a -> a
  abs :: a -> a
  signum :: a -> a
  fromInteger :: Integer -> a
  {-# MINIMAL (+), (*), abs, signum, fromInteger, (negate | (-)) #-}
  	-- Defined in ‘GHC.Num’
instance Num NominalDiffTime
  -- Defined in ‘time-1.9.3:Data.Time.Clock.Internal.NominalDiffTime’
instance Num DiffTime
  -- Defined in ‘time-1.9.3:Data.Time.Clock.Internal.DiffTime’
instance Num Word -- Defined in ‘GHC.Num’
instance Num Integer -- Defined in ‘GHC.Num’
instance Num Int -- Defined in ‘GHC.Num’
instance Num Float -- Defined in ‘GHC.Float’
instance Num Double -- Defined in ‘GHC.Float’
2022-10-06 15:20:05.668481829
[?1h=>>> :t 3
[?1l>3 :: Num p => p
2022-10-06 15:24:36.827816014
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )

[;1msrc/Rec.hs:6:18: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    • No instance for (Num a) arising from the literal ‘1’
      Possible fix:
        add (Num a) to the context of
          the type signature for:
            product :: forall a. [a] -> a
    • In the expression: 1
      In an equation for ‘product’: product [] = 1[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m6 |[0m[0m product []     = [;1m[31m1[0m[0m
[;1m[34m  |[0m[0m[;1m[31m                  ^[0m[0m
Failed, no modules loaded.
2022-10-06 15:30:07.491976632
[?1h=>>> :r[K[K>>> >>> >>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )

[;1msrc/Rec.hs:13:23: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m Variable not in scope: n :: Int[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m13 |[0m[0m drop ns (x:xs)= drop ([;1m[31mn[0m[0m-1) xs
[;1m[34m   |[0m[0m[;1m[31m                       ^[0m[0m
Failed, no modules loaded.
2022-10-06 15:41:45.506410437
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )

[;1msrc/Rec.hs:13:24: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m Variable not in scope: n :: Int[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m13 |[0m[0m drop ns (x:xs)= drop ( [;1m[31mn[0m[0m -1) xs
[;1m[34m   |[0m[0m[;1m[31m                        ^[0m[0m
Failed, no modules loaded.
2022-10-06 15:42:02.161122996
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:42:15.763814252
[?1h=>>> drop 2 {[K[1,2,3,4,5,[K]
[?1l>[3,4,5]
2022-10-06 15:42:36.416210207
[?1h=>>> drop 2 [1,2,3,4,5] [1,2,3,4,5][K[12D6 [1,2,3,4,5][12D
[?1l>[]
2022-10-06 15:42:46.335800435
[?1h=>>> >>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:48:07.940877396
[?1h=>>> :r
[?1l>Ok, one module loaded.
2022-10-06 15:51:59.414848635
[?1h=>>> head {[K[]
[?1l>*** Exception: Prelude.head: empty list
2022-10-06 15:52:09.854935134
[?1h=>>> tail []
[?1l>*** Exception: Prelude.tail: empty list
2022-10-06 15:52:17.516134981
[?1h=>>> last []
[?1l>*** Exception: Prelude.last: empty list
2022-10-06 15:54:27.682979717
[?1h=>>> init []
[?1l>
[;1m<interactive>:21:1: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m Variable not in scope: init :: [a0] -> t[0m[0m
2022-10-06 15:54:34.161648444
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 16:01:07.663479802
[?1h=>>> ni[K[Kinit [3,1,4,1,5]
[?1l>[3,1,4,1]
2022-10-06 16:01:25.861136883
[?1h=>>> init []
[?1l>*** Exception: karaya-
CallStack (from HasCallStack):
  error, called at src/Rec.hs:15:11 in main:Rec
2022-10-06 16:03:17.925579611
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 16:11:10.616041976
[?1h=>>> fac ()-)1)
[?1l>*** Exception: negative number
CallStack (from HasCallStack):
  error, called at src/Rec.hs:24:18 in main:Rec
2022-10-06 16:11:54.45735741
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 16:17:12.263643489
[?1h=>>> git a[K[K[K[K[K:q
[?1l>Leaving GHCi.
]0;nao@nao: ~/bprog2022[01;32mnao@nao[00m:[01;34m~/bprog2022[00m$ git add .
